--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -86,21 +86,6 @@
   preview={2025-76-13-jasist.jpg}
 }
 
-@article{an2024college,
-  title={College students' metaphors for ChatGPT: An exploratory study},
-  author={An, Jiaxin and Bak, Hyerin and Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
-  journal={Proceedings of the Association for Information Science and Technology},
-  volume={61},
-  number={1},
-  pages={846--848},
-  year={2024},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
-  abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
-  doi={https://doi.org/10.1002/pra2.1116}, 
-  pdf={2024-ASIST-Abstract1.pdf},
-  preview={2024-ASIST-ConfProc.jpg}
-}
-
 @article{xie2024help,
   title={Help-seeking situations related to visual interactions on mobile platforms and recommended designs for blind and visually impaired users},
   author={Xie, Iris and Choi, Wonchan and Wang, Shengang and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Ning-Chiao and Cudjoe, Emmanuel Kwame},
@@ -114,7 +99,21 @@
   doi={https://doi.org/10.3390/jimaging10080205},
   pdf={2024-JImage.pdf},
   preview={2024-10-8-jimaging.png}
+}
 
+@article{an2024college,
+  title={College students' metaphors for ChatGPT: An exploratory study},
+  author={An, Jiaxin and Bak, Hyerin and Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={61},
+  number={1},
+  pages={846--848},
+  year={2024},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
+  doi={https://doi.org/10.1002/pra2.1116}, 
+  pdf={2024-ASIST-Abstract1.pdf},
+  preview={2024-ASIST-ConfProc.jpg}
 }
 
 @article{choi2024reflective,
@@ -276,20 +275,6 @@
   abstract={Background and objective: Diabetes and hypertension are two prevalent and related chronic conditions. To inform the design and development of mobile health applications (mHealth apps) for people living with multiple chronic conditions, this paper examines features mentioned in developers’ descriptions and user reviews of mHealth apps, along with users’ attitudes toward associated features. Materials and methods: Eleven top apps for diabetes and hypertension were identified from Google Play as of January 2020. Based on a stratified sampling strategy, 1,100 user reviews were selected to form the final dataset. Developers’ descriptions were also collected for analysis. Using the grounded theory approach, we developed a feature-oriented coding scheme, which was used to identify three levels of features mentioned in app descriptions and user reviews: feature group (the highest level), feature type (the second level), and individual feature (the lowest level). Users’ attitudes toward app features mentioned in user reviews were also analyzed. Results: Most top-rated apps for diabetes and hypertension under study were multifeatured, incorporating self-management, information sharing, and decision support features. At the feature-group level, most informative user reviews commented on features related to self-management, followed by decision support and information sharing. The four most frequently mentioned feature types were data entry, data export/import, data visualization, and assessment. Users expressed overwhelming positive attitudes toward app features across all feature categories. Based on users’ assessments of existing features and requests for additional features, design implications for app development are provided. Conclusions: Despite the diversity of app features provided by mHealth apps and users’ primarily positive attitudes toward existing app features, more comprehensive and personalized features are expected by app users to satisfy their health needs. Beyond identifying app features in user reviews, future research may seek more in-depth feedback from real-life patients for app development and design using methods like interviews and focus groups, to further enhance the overall quality of relevant mHealth apps to better support users.},
 }
 
-@article{choi2020validating,
-  title={Validating an extended typology of web credibility assessment},
-  author={Choi, Wonchan and Luo, Manman and Kim, Sang-Yeon},
-  journal={Proceedings of the Association for Information Science and Technology},
-  volume={57},
-  number={1},
-  pages={e357},
-  year={2020},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
-  doi={https://doi.org/10.1002/pra2.357},
-  abstract={This methodology poster introduces an ongoing study seeking to validate an extended typology of web credibility assessments proposed by Choi and Stvilia (2015) using online surveys. The study focuses on health-related topics as an important subject domain for web credibility assessments. The poster describes the study's theoretical background and methodology, especially the process of developing and testing the online survey questionnaire, which consists of 89 questions in five sections: internet use and experience, health information seeking, web credibility assessment, outcomes of web credibility assessment, and demographic factors. A pretest of the online survey questionnaire was conducted with eight doctoral students, in which each participant answered the questions and provided feedback on the survey design. Pretest results and future research directions are discussed.},
-  pdf={2020-ASIST-Poster.pdf},
-}
-
 @article{choi2020older,
   title={Older adults' credibility assessment of online health information: An exploratory study using an extended typology of web credibility},
   author={Choi, Wonchan},
@@ -319,64 +304,18 @@
   preview={2020-27-6-jamia.jpeg}
 }
 
-@article{oh2019challenges,
-  title={Challenges in self-management among older adults with hypertension and diabetes},
-  author={Oh, Hyunkyoung and Lee, Yura and Choi, Wonchan and Zheng, Zhi},
-  journal={Innovation in Aging},
-  volume={3},
-  number={Supplement\_1},
-  pages={S316--S317},
-  year={2019},
-  publisher={Oxford University Press US},
-  doi={https://doi.org/10.1093/geroni/igab046.3428},
-  abstract={The World Population Prospects 2019 reports that the proportion of people who aged 65 and above takes up 9 per cent globally in 2019, reaching up to 16 per cent by 2050. Asia has the fastest rise: from 1 in 9 people aged 65 and above to 1 in 4 in 2050. Rapid growth in older adults has strong implications for diseases and healthcare expenditure. For Singapore, the transition from ‘ageing society’ (7% seniors) in 1999 to ‘super-aged society’ (20% seniors) in 2026 is projected to take 27 years, much faster than Japan’s 36 years. We used the Singapore Multi-Ethnic Cohort (MEC) of 14,465 subjects aged 21 to 94, and the Future Elderly Model (FEM) microsimulation model to project disease burden and hospitalization expenditures to 2050. We found that Chinese females had the highest life expectancy of 86.0 years, followed by Indian and Malay females with 80.4 and 75.6 years respectively. In all racial groups, women lived longer than men by 5-7 years. Cumulative hospitalization expenditures of older adults aged 51+ was US$69,500 for Chinese, US$67,600 for Malays and US$86,100 for Indians; US$71,200 for males and US$70,700 for females. The increased hospitalization spending for all three ethnic groups was due to the underlying manifestation of chronic diseases, including diabetes, hypertension, heart disease and stroke. Variations in environmental risk factors such as diet, cigarette smoking and physical activity across ethnic groups may contribute to racial differences in chronic diseases and disability. Therefore, targeted interventions are needed to reduce racial disparities.},
-  abbr={ConfProc},
-}
-
-@article{choi2019mhealth,
-  title={mHealth technologies for osteoarthritis self-management and treatment: A systematic review},
-  author={Choi, Wonchan and Zheng, Hua and Franklin, Patricia and Tulu, Bengisu},
-  journal={Health Informatics Journal},
-  volume={25},
-  number={3},
-  pages={984--1003},
-  year={2019},
-  publisher={SAGE Publications},
-  doi={https://doi.org/10.1177/1460458217735676},
-  abstract={Osteoarthritis is a common chronic disease that can be better treated with the help of self-management interventions. Mobile health (mHealth) technologies are becoming a popular means to deliver such interventions. We reviewed the current state of research and development of mHealth technologies for osteoarthritis self-management to determine gaps future research could address. We conducted a systematic review of English articles and a survey of apps available in the marketplace as of 2016. Among 117 unique articles identified, 25 articles that met our inclusion criteria were reviewed in-depth. The app search identified 23 relevant apps for osteoarthritis self-management. Through the synthesis of three research themes (osteoarthritis assessment tools, osteoarthritis measurement tools, and osteoarthritis motion monitoring tools) that emerged from the current knowledge base, we provide a design framework to guide the development of more comprehensive osteoarthritis mHealth apps that facilitate self-management, decision support, and shared decision-making.},
-  pdf={2019-HIJ.pdf},
-  abbr={HIJ},
-}
-
-@article{wang2019assessing,
-  title={Assessing the informativeness of user reviews on mobile health applications for chronic diseases},
-  author={Wang, Shengang and Lee, Hyun Seung and Choi, Wonchan},
+@article{choi2020validating,
+  title={Validating an extended typology of web credibility assessment},
+  author={Choi, Wonchan and Luo, Manman and Kim, Sang-Yeon},
   journal={Proceedings of the Association for Information Science and Technology},
-  volume={56},
+  volume={57},
   number={1},
-  pages={790--791},
-  year={2019},
+  pages={e357},
+  year={2020},
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
-  doi={https://doi.org/10.1002/pra2.178},
-  abstract={With advances in mobile health (mHealth) technology and growing ownership of smartphones, mHealth applications have great potential to support patients' self-management of chronic diseases such as diabetes and hypertension. Informative consumer reviews on app stores (e.g., Google Play) are a useful source of information for app developers to understand users' needs and for users to select a pertinent app over similar alternatives. This poster reports preliminary findings of a study that explores factors affecting the informativeness of consumer reviews using a feature-centered rating scale. The results show that consumer ratings and the length of consumer reviews are both correlated with informativeness. These findings will contribute to filtering informative reviews for future in-depth analyses of app features.},
-  pdf={https://asistdl.onlinelibrary.wiley.com/doi/epdf/10.1002/pra2.178},
-  abbr={ASIST},
-}
-
-@article{choi2019analyzing,
-  title={Analyzing divergent methodologies for political fact checking: United States and South Korea},
-  author={Choi, Wonchan and Haigh, Maria},
-  journal={Proceedings of the Association for Information Science and Technology},
-  volume={56},
-  number={1},
-  pages={627--628},
-  year={2019},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
-  doi={https://doi.org/10.1002/pra2.112},
-  abstract={In this work in progress, we explore methods employed by professional journalists to fact-check political claims and debunk inaccurate (“fake”) news stories. We content-analyzed 150 articles evaluating political claims and debunking fake news published by two media companies, the Washington Post (United States) and JTBC (South Korea), during the periods surrounding the recent presidential elections in their respective countries. Overall, the most common types of claims evaluated included false claims made by politicians or political groups about their opponents' positions and numerical and nonnumerical facts. The most frequently used methods for debunking such false claims included consulting with an independent expert in the given topic domain and checking government statistics or documents. There were some variations in the types of false claims focused and debunking methods used between the two fact-checking organizations.},
-  pdf={2019-ASIST-Abstract.pdf},
-  poster={2019-ASIST-Poster.pdf},
-  abbr={ASIST},
+  doi={https://doi.org/10.1002/pra2.357},
+  abstract={This methodology poster introduces an ongoing study seeking to validate an extended typology of web credibility assessments proposed by Choi and Stvilia (2015) using online surveys. The study focuses on health-related topics as an important subject domain for web credibility assessments. The poster describes the study's theoretical background and methodology, especially the process of developing and testing the online survey questionnaire, which consists of 89 questions in five sections: internet use and experience, health information seeking, web credibility assessment, outcomes of web credibility assessment, and demographic factors. A pretest of the online survey questionnaire was conducted with eight doctoral students, in which each participant answered the questions and provided feedback on the survey design. Pretest results and future research directions are discussed.},
+  pdf={2020-ASIST-Poster.pdf},
 }
 
 @article{choi2019older,
@@ -392,6 +331,68 @@
   abstract={Health information seeking is an important part of older adults' everyday lives as they cope with their health conditions. Semi-structured interviews conducted with 21 older adults in the United States were analyzed using Savolainen's everyday life information seeking (ELIS) model, especially its key concepts such as way of life and mastery of life. The interview data revealed that except for health care providers, a spouse or partner was mentioned as a credible interpersonal source of health information among older adults in a marital or romantic relationship. Characteristics of older adults' health information behavior in the ELIS context were identified based on types of way of life and mastery of life. For example, those who had more varied types of hobbies, including cognitive, affective, and social hobbies, were exposed to diverse people as they performed their daily routine, potentially resulting in different sources of useful health information. In couple relationships, those with an optimistic as opposed to pessimistic attitude toward a problem-solving situation played the information provider role rather than information receiver role.},
   pdf={2019-LISR.pdf},
   preview={lisr.jpg}
+}
+
+@article{choi2019mhealth,
+  title={mHealth technologies for osteoarthritis self-management and treatment: A systematic review},
+  author={Choi, Wonchan and Zheng, Hua and Franklin, Patricia and Tulu, Bengisu},
+  journal={Health Informatics Journal},
+  volume={25},
+  number={3},
+  pages={984--1003},
+  year={2019},
+  publisher={SAGE Publications},
+  doi={https://doi.org/10.1177/1460458217735676},
+  abstract={Osteoarthritis is a common chronic disease that can be better treated with the help of self-management interventions. Mobile health (mHealth) technologies are becoming a popular means to deliver such interventions. We reviewed the current state of research and development of mHealth technologies for osteoarthritis self-management to determine gaps future research could address. We conducted a systematic review of English articles and a survey of apps available in the marketplace as of 2016. Among 117 unique articles identified, 25 articles that met our inclusion criteria were reviewed in-depth. The app search identified 23 relevant apps for osteoarthritis self-management. Through the synthesis of three research themes (osteoarthritis assessment tools, osteoarthritis measurement tools, and osteoarthritis motion monitoring tools) that emerged from the current knowledge base, we provide a design framework to guide the development of more comprehensive osteoarthritis mHealth apps that facilitate self-management, decision support, and shared decision-making.},
+  pdf={2019-HIJ.pdf},
+  preview={hij.jpg}
+}
+
+
+@article{oh2019challenges,
+  title={Challenges in self-management among older adults with hypertension and diabetes},
+  author={Oh, Hyunkyoung and Lee, Yura and Choi, Wonchan and Zheng, Zhi},
+  journal={Innovation in Aging},
+  volume={3},
+  number={Supplement\_1},
+  pages={S316--S317},
+  year={2019},
+  publisher={Oxford University Press US},
+  doi={https://doi.org/10.1093/geroni/igab046.3428},
+  abstract={The World Population Prospects 2019 reports that the proportion of people who aged 65 and above takes up 9 per cent globally in 2019, reaching up to 16 per cent by 2050. Asia has the fastest rise: from 1 in 9 people aged 65 and above to 1 in 4 in 2050. Rapid growth in older adults has strong implications for diseases and healthcare expenditure. For Singapore, the transition from ‘ageing society’ (7% seniors) in 1999 to ‘super-aged society’ (20% seniors) in 2026 is projected to take 27 years, much faster than Japan’s 36 years. We used the Singapore Multi-Ethnic Cohort (MEC) of 14,465 subjects aged 21 to 94, and the Future Elderly Model (FEM) microsimulation model to project disease burden and hospitalization expenditures to 2050. We found that Chinese females had the highest life expectancy of 86.0 years, followed by Indian and Malay females with 80.4 and 75.6 years respectively. In all racial groups, women lived longer than men by 5-7 years. Cumulative hospitalization expenditures of older adults aged 51+ was US$69,500 for Chinese, US$67,600 for Malays and US$86,100 for Indians; US$71,200 for males and US$70,700 for females. The increased hospitalization spending for all three ethnic groups was due to the underlying manifestation of chronic diseases, including diabetes, hypertension, heart disease and stroke. Variations in environmental risk factors such as diet, cigarette smoking and physical activity across ethnic groups may contribute to racial differences in chronic diseases and disability. Therefore, targeted interventions are needed to reduce racial disparities.},
+  preview={innoaging.jpeg}
+}
+
+
+@article{wang2019assessing,
+  title={Assessing the informativeness of user reviews on mobile health applications for chronic diseases},
+  author={Wang, Shengang and Lee, Hyun Seung and Choi, Wonchan},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={56},
+  number={1},
+  pages={790--791},
+  year={2019},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  doi={https://doi.org/10.1002/pra2.178},
+  abstract={With advances in mobile health (mHealth) technology and growing ownership of smartphones, mHealth applications have great potential to support patients' self-management of chronic diseases such as diabetes and hypertension. Informative consumer reviews on app stores (e.g., Google Play) are a useful source of information for app developers to understand users' needs and for users to select a pertinent app over similar alternatives. This poster reports preliminary findings of a study that explores factors affecting the informativeness of consumer reviews using a feature-centered rating scale. The results show that consumer ratings and the length of consumer reviews are both correlated with informativeness. These findings will contribute to filtering informative reviews for future in-depth analyses of app features.},
+  pdf={https://asistdl.onlinelibrary.wiley.com/doi/epdf/10.1002/pra2.178},
+  preview={2019-asist-am.jpg}
+}
+
+@article{choi2019analyzing,
+  title={Analyzing divergent methodologies for political fact checking: United States and South Korea},
+  author={Choi, Wonchan and Haigh, Maria},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={56},
+  number={1},
+  pages={627--628},
+  year={2019},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  doi={https://doi.org/10.1002/pra2.112},
+  abstract={In this work in progress, we explore methods employed by professional journalists to fact-check political claims and debunk inaccurate (“fake”) news stories. We content-analyzed 150 articles evaluating political claims and debunking fake news published by two media companies, the Washington Post (United States) and JTBC (South Korea), during the periods surrounding the recent presidential elections in their respective countries. Overall, the most common types of claims evaluated included false claims made by politicians or political groups about their opponents' positions and numerical and nonnumerical facts. The most frequently used methods for debunking such false claims included consulting with an independent expert in the given topic domain and checking government statistics or documents. There were some variations in the types of false claims focused and debunking methods used between the two fact-checking organizations.},
+  pdf={2019-ASIST-Abstract.pdf},
+  poster={2019-ASIST-Poster.pdf},
+  preview={2019-asist-am.jpg}
 }
 
 @article{tulu2017framework,
@@ -465,6 +466,21 @@
   abbr={MJLIS},
 }
 
+@article{choi2015web,
+  title={Web credibility assessment: Conceptualization, operationalization, variability, and models},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={Journal of the Association for Information Science and Technology},
+  volume={66},
+  number={12},
+  pages={2399--2414},
+  year={2015},
+  doi={https://doi.org/10.1002/asi.23543},
+  abstract={This article reviews theoretical and empirical studies on information credibility, with particular questions as to how scholars have conceptualized credibility, which is known as a multifaceted concept with underlying dimensions; how credibility has been operationalized and measured in empirical studies, especially in the web context; what are the important user characteristics that contribute to the variability of web credibility assessment; and how the process of web credibility assessment has been theorized. An agenda for future research on information credibility is also discussed.},
+  pdf={2015-JASIST.pdf},
+  abbr={Journal},
+  preview={2015-66-12-jasist.jpg}
+}
+
 @article{yang2015looking,
   title={Looking beyond the numbers: Bibliometric approach to analysis of LIS research in Korea},
   author={Yang, Kiduk and Lee, Jongwook and Choi, Wonchan},
@@ -479,6 +495,16 @@
   pdf={2015-JKSLIS.pdf},
   abbr={JKSLIS},
 }
+
+@article{choi2015new-b,
+  title={New framework of web credibility assessment and an exploratory study of older adults' information behavior on the Web},
+  author={Choi, Wonchan},
+  year={2015}, 
+  abbr={Dissertation},
+  html={https://repository.lib.fsu.edu/islandora/object/fsu:253213},
+  abstract={This dissertation research aims to provide a better understanding of people's credibility assessment of online information (i.e., Web credibility assessment), which is an important part of their information behavior. In particular, this research focuses on older adults as a research population as they are a less studied user group in the literature on information credibility. Considering the ever increasing presence of older adults on the Web and their needs for health information in their daily lives, this research explores older adults' credibility assessment of online health information within the context of everyday life information seeking (ELIS). The methodology employed in this research consists of a qualitative meta-study (Phase I) and semi-structured interviews (Phase II). In Phase I, the researcher analyzed 84 primary research reports on information credibility, identifying conceptual typologies of important facets of credibility assessment such as conceptualization, operationalization, variability (user characteristics and contexts), and process. Based on these conceptual typologies, the researcher proposed a new, extended framework of Web credibility assessment, named WC framework, that contains three main components, Assessment of WC—i.e., conceptualization and operationalization to measure Web credibility; Variability of WC—i.e., variables regarding individual and context; and Process of WC—i.e., the overall process of Web credibility assessment. In Phase II, the researcher conducted semi-structured interviews with twenty-one older adults whose ages ranged from 61 to 80 (M = 70.3) in the manner of one-on-one, in-person. The purposeful sampling methods, such as convenience sampling and snowball sampling, were used to recruit older adults who meet the sampling criteria of the study: age (55 years old or older), residency (Florida residents for an in-person interview), and Internet use experience. Also, a prescreen test was carried out via a telephone interview to make sure that the participant's cognitive function was adequate for the study. Those who met all the sampling criteria and passed the prescreen test were recruited for an in-person interview which lasted around 45 minutes. The interview data revealed that older adults needed health/wellness information regarding medication and supplements, symptoms of and cures for specific diseases, medical quality assurance, health insurance, nutrition, and exercise. In seeking health information, they used both interpersonal and online sources. As for the interpersonal sources, the research participants mentioned medical professionals (e.g., doctors and physicians), partners, family, and friends. On the Web, they referenced information from non-profit (i.e., non-commercial) institutions' websites such as government websites (e.g., NIH, CDC) and university hospitals' websites (e.g., Johns Hopkins Medicine, Harvard Medical School). The most frequently mentioned commercial website was WebMD. Depending on the purposes of health information seeking, some interviewees mentioned that they used pharmacists' websites (e.g., Walgreens and CVS). When judging the credibility of online health information, they employed various cues/markers and heuristics that are related to the attributes of the operator (i.e., source), content (i.e., message), and design (i.e., media) of Web resources. Based on the new framework developed in Phase I, the informants' Web credibility assessment process was characterized with the two stages: initial and final evaluations. Lastly, both theoretical and empirical implications of the research and future research directions were discussed. Specifically, the new Web credibility assessment framework (i.e., the WC framework) advanced our understanding of the conceptualization of Web credibility and can be used as a knowledge resource in developing context specific credibility assessment models as well as information system interfaces that provide effective support for information credibility evaluation by users. Likewise, findings from the semi-structured interviews can inform online information system developers and librarians about how older users search for online health information and how they assess its credibility. Ultimately, the findings of this research should help the development of more effective online systems, services, and, training modules that are aligned with the online information behaviors of this rapidly growing, important user population—i.e., older adults.},
+}
+
 
 @article{choi2015new-a,
   title={A new framework for Web credibility assessment},
@@ -509,30 +535,6 @@
   preview={lisr.jpg}
 }
 
-@article{choi2015web,
-  title={Web credibility assessment: Conceptualization, operationalization, variability, and models},
-  author={Choi, Wonchan and Stvilia, Besiki},
-  journal={Journal of the Association for Information Science and Technology},
-  volume={66},
-  number={12},
-  pages={2399--2414},
-  year={2015},
-  doi={https://doi.org/10.1002/asi.23543},
-  abstract={This article reviews theoretical and empirical studies on information credibility, with particular questions as to how scholars have conceptualized credibility, which is known as a multifaceted concept with underlying dimensions; how credibility has been operationalized and measured in empirical studies, especially in the web context; what are the important user characteristics that contribute to the variability of web credibility assessment; and how the process of web credibility assessment has been theorized. An agenda for future research on information credibility is also discussed.},
-  pdf={2015-JASIST.pdf},
-  abbr={Journal},
-  preview={2015-66-12-jasist.jpg}
-}
-
-@article{choi2015new-b,
-  title={New framework of web credibility assessment and an exploratory study of older adults' information behavior on the Web},
-  author={Choi, Wonchan},
-  year={2015}, 
-  abbr={Dissertation},
-  html={https://repository.lib.fsu.edu/islandora/object/fsu:253213},
-  abstract={This dissertation research aims to provide a better understanding of people's credibility assessment of online information (i.e., Web credibility assessment), which is an important part of their information behavior. In particular, this research focuses on older adults as a research population as they are a less studied user group in the literature on information credibility. Considering the ever increasing presence of older adults on the Web and their needs for health information in their daily lives, this research explores older adults' credibility assessment of online health information within the context of everyday life information seeking (ELIS). The methodology employed in this research consists of a qualitative meta-study (Phase I) and semi-structured interviews (Phase II). In Phase I, the researcher analyzed 84 primary research reports on information credibility, identifying conceptual typologies of important facets of credibility assessment such as conceptualization, operationalization, variability (user characteristics and contexts), and process. Based on these conceptual typologies, the researcher proposed a new, extended framework of Web credibility assessment, named WC framework, that contains three main components, Assessment of WC—i.e., conceptualization and operationalization to measure Web credibility; Variability of WC—i.e., variables regarding individual and context; and Process of WC—i.e., the overall process of Web credibility assessment. In Phase II, the researcher conducted semi-structured interviews with twenty-one older adults whose ages ranged from 61 to 80 (M = 70.3) in the manner of one-on-one, in-person. The purposeful sampling methods, such as convenience sampling and snowball sampling, were used to recruit older adults who meet the sampling criteria of the study: age (55 years old or older), residency (Florida residents for an in-person interview), and Internet use experience. Also, a prescreen test was carried out via a telephone interview to make sure that the participant's cognitive function was adequate for the study. Those who met all the sampling criteria and passed the prescreen test were recruited for an in-person interview which lasted around 45 minutes. The interview data revealed that older adults needed health/wellness information regarding medication and supplements, symptoms of and cures for specific diseases, medical quality assurance, health insurance, nutrition, and exercise. In seeking health information, they used both interpersonal and online sources. As for the interpersonal sources, the research participants mentioned medical professionals (e.g., doctors and physicians), partners, family, and friends. On the Web, they referenced information from non-profit (i.e., non-commercial) institutions' websites such as government websites (e.g., NIH, CDC) and university hospitals' websites (e.g., Johns Hopkins Medicine, Harvard Medical School). The most frequently mentioned commercial website was WebMD. Depending on the purposes of health information seeking, some interviewees mentioned that they used pharmacists' websites (e.g., Walgreens and CVS). When judging the credibility of online health information, they employed various cues/markers and heuristics that are related to the attributes of the operator (i.e., source), content (i.e., message), and design (i.e., media) of Web resources. Based on the new framework developed in Phase I, the informants' Web credibility assessment process was characterized with the two stages: initial and final evaluations. Lastly, both theoretical and empirical implications of the research and future research directions were discussed. Specifically, the new Web credibility assessment framework (i.e., the WC framework) advanced our understanding of the conceptualization of Web credibility and can be used as a knowledge resource in developing context specific credibility assessment models as well as information system interfaces that provide effective support for information credibility evaluation by users. Likewise, findings from the semi-structured interviews can inform online information system developers and librarians about how older users search for online health information and how they assess its credibility. Ultimately, the findings of this research should help the development of more effective online systems, services, and, training modules that are aligned with the online information behaviors of this rapidly growing, important user population—i.e., older adults.},
-}
-
 @article{choi2014collegechoose,
   title={College Students' Value Structure of Choosing and Using Mobile Health/Wellness Applications: Preliminary Findings},
   author={Choi, Wonchan and Stvilia, Besiki},
@@ -543,7 +545,7 @@
   abstract={This work-in-progress poster reports on the preliminary findings regarding college students’ value structure of how to choose and utilize mobile health/wellness applications. We have conducted surveys and follow-up interviews with college students who have been using mobile health/wellness applications. In this poster, we analyzed the survey data from sixteen participants and the interview data from five participants (three females and two males). The analysis showed that the most important purposes of using mobile health/wellness applications for college students were recording and managing personal health information/records and keeping up with their fitness plans. For selection criteria, easy to navigate, easy to use, quality of content, customizability, and ratings from other users seemed to play the most important role in college students’ choices of certain mobile applications among alternatives.},
   pdf={2014-iConf-Poster-Manu.pdf},
   poster={2014-iConf-Poster.pdf},
-  abbr={iConf},
+  preview={ideals.png},
 }
 
 @article{choi2014college,
